<resources>
    <string name="app_name">FeelVibe</string>
    <string name="main_home">Home</string>
    <string name="main_library">Library</string>
    <string name="main_create">Create</string>
    <string name="main_search">Search</string>
    <string name="home_explore">Explore</string>
    <string name="home_profile">Profile</string>
    <string name="library_playlist">Playlists</string>
    <string name="library_album">Albums</string>
    <string name="library_artist">Artists</string>
    <string name="library_tag">Tags</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="simple_item_image_desc">Album disk as cover-art placeholder</string>
    <string name="app_icon">Two paint brush leaning upwards beside a play icon</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="login_failed">"Login failed"</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="click_here_to_login"> Click here to login</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="skip">Skip</string>
    <string name="untitled">Untitled</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permission_context">To bring optimal user experience, FeelVibe requires certain permissions to operate. File access permission is required to read local file music.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="create_playlist">Create playlist</string>
    <string name="edit_playlist">Edit playlist</string>
    <string name="favorites">Favorites</string>
    <string name="favorite">Favorite</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="select_image">Select image</string>
    <string name="cover_art_a">Cover art:</string>
    <string name="title_a">Title</string>
    <string name="title_b">Title:</string>
    <string name="playlist_title_already_taken">Playlist title already taken!</string>
    <string name="playlist_requires_a_title">Playlist requires a title!</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="search">Search</string>
    <string name="designs">Designs</string>
    <string name="lyrics">Lyrics</string>
    <string name="chords">Chords</string>
    <string name="create_design">Create design</string>
    <string name="save">Save</string>
    <string name="select_background">Select background</string>
    <string name="select_foreground">Select foreground</string>
    <string name="n_a">N/A</string>
    <string name="timeStampPlaceHolder">00:00</string>
    <string name="design">Design</string>
    <string name="longTextTest">Your long text goes here. Your long text goes here. Your long text goes here. Your long text goes here. Your long text goes here. Your long text goes here. Text</string>
    <string name="create_lyrics">Create lyrics</string>
    <string name="create_chords">Create chords</string>
    <string name="clear">Clear</string>
    <string name="log_in">Log-in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="username">Username</string>
    <string name="agree_to_terms"><![CDATA[I have read and agree to the terms & conditions and the privacy policy.]]></string>
    <string name="show_terms">Show Terms</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="terms_title">Terms and Conditions</string>
    <string name="terms_intro">      Welcome to FeelVibe, a music streaming and social media app ("the App") provided by FeelVibe, Inc. By using the App, you agree to be bound by the following terms and conditions:</string>
    <string name="terms_use_of_app_title">Use of the App</string>
    <string name="terms_use_of_app_a">Use of the App</string>
    <string name="terms_use_of_app_b">Use of the App</string>
    <string name="terms_use_of_app_c">Use of the App</string>
    <string name="str_continue">Continue</string>
    <string name="register">Register</string>
    <string name="entice_signup">─── Don\'t have an account? ───</string>
    <string name="feature_warn">An account is required to access this feature. Please login or signup.</string>
    <string name="skip_feature">Return to previous page</string>
    <string name="returnBack">Return</string>
    <string name="empty_dialog">Dialog is empty…</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="speedLabel">Speed • </string>
    <string name="speedPlaceholder">1.0x</string>
    <string name="slowestSpeedOption">0.25x</string>
    <string name="verySlowSpeedOption">0.5x</string>
    <string name="slowSpeedOption">0.75x</string>
    <string name="normalSpeedOption">Normal</string>
    <string name="fastSpeedOption">1.25x</string>
    <string name="veryFastSpeedOption">1.5x</string>
    <string name="fastestSpeedOption">1.75x</string>
    <string name="ultraFastSpeedOption">2.0x</string>
</resources>