<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    android:id="@+id/authorizationReqLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingVertical="20dp"
    android:paddingHorizontal="30dp"
    android:backgroundTint="@color/background_color_night_mode"
    android:background="@drawable/rounded_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/featureWarnTxtView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/feature_warn"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@drawable/rounded_background"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entice_signup"
        android:textAlignment="center"
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:background="@drawable/rounded_background"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/skipFeatureBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/skip_feature"
        android:textAlignment="center" />

</androidx.appcompat.widget.LinearLayoutCompat>