<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    android:id="@+id/signUpLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        style="@style/IconDayNight"
        android:src="@drawable/ic_app_icon"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="32sp"
        android:text="@string/app_name"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/sign_up"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="filled"
            app:startIconDrawable="@drawable/ic_person_24"
            android:layout_marginEnd="6dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/AccountSignUpFirstNameInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="12dp"
                android:inputType="textPersonName"
                android:autofillHints="name"
                android:textSize="14sp"
                android:ems="10"
                android:maxLength="30"
                android:hint="@string/first_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="filled"
            app:startIconDrawable="@drawable/ic_person_24"
            android:layout_marginStart="6dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/AccountSignUpLastNameInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="12dp"
                android:inputType="textPersonName"
                android:autofillHints="name"
                android:textSize="14sp"
                android:ems="10"
                android:maxLength="30"
                android:hint="@string/last_name"/>

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:boxBackgroundMode="filled"
        app:startIconDrawable="@drawable/ic_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/AccountSignUpUsernameInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="12dp"
            android:inputType="textPersonName"
            android:autofillHints="name"
            android:textSize="14sp"
            android:ems="10"
            android:maxLength="30"
            android:hint="@string/username"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:boxBackgroundMode="filled"
        app:startIconDrawable="@drawable/ic_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/AccountSignUpEmailInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="12dp"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:textSize="14sp"
            android:ems="10"
            android:hint="@string/email"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginBottom="12dp"
        app:boxBackgroundMode="filled"
        app:startIconDrawable="@drawable/ic_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/AccountSignUpPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="12dp"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:textSize="14sp"
            android:ems="10"
            android:hint="@string/password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginBottom="12dp"
        app:boxBackgroundMode="filled"
        app:startIconDrawable="@drawable/ic_lock_24">

        <EditText
            android:id="@+id/AccountSignUpConfirmPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:paddingHorizontal="12dp"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:textSize="14sp"
            android:ems="10"
            android:hint="@string/confirm_password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/showTermsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_terms"
        android:textColor="@color/purple_200"/>

    <CheckBox
        android:id="@+id/agreeTermsBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agree_to_terms"/>

    <Button
        android:id="@+id/AccountSignUpConfirmBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/register"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/register_hint_textView_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:text="@string/already_have_an_account"
            android:textAlignment="viewEnd" />

        <TextView
            android:id="@+id/register_hint_textView_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/click_here_to_login" />
    </LinearLayout>

    <TextView
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/cancel"
        android:visibility="visible"
        android:layout_gravity="end"
        android:layout_marginTop="30dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>