<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:paddingHorizontal="30dp"
    android:paddingTop="20dp"
    android:paddingBottom="10dp"
    android:backgroundTint="@color/background_color_night_mode"
    android:background="@drawable/rounded_background">

    <TextView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="Title"/>

    <TextView
        android:id="@+id/contentView"
        android:maxWidth="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:hint="@string/empty_dialog"
        android:text="@string/longTextTest" />

    <Button
        android:id="@+id/returnBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/white"
        android:text="@string/returnBack"/>


</androidx.appcompat.widget.LinearLayoutCompat>